* Fixed the matching on the possible trailing '?' (thanks Allan) * Removed the last train of \'s from the regexp matching, because for some   reason it matches \\) instead of \\
git-svn-id: http://svn.textmate.org/trunk/LanguageDefinition.tmbundle@115 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -20,7 +20,7 @@
             end = "'";
             swallow = "\\\\.";
             patterns = (
-                {   name = "strings.regexp.tm-language-def"; foregroundColor = "#ff0000"; match = "(\\\\\\\\[tvnrfaewWdDsSuUlL]([*+?])?(?)?|\\^|\\$|\\||\\.([*+?])?(?)?)|\\\\\\\\[Az<>bB]|\\\\\\\\)"; },
+                {   name = "strings.regexp.tm-language-def"; foregroundColor = "#ff0000"; match = "(\\\\\\\\[tvnrfaewWdDsSuUlL]([*+?])?\\??|\\^|\\$|\\||\\.([*+?])?\\??)|\\\\\\\\[Az<>bB])"; },
                 {   name = "constants.colors.tm-language-def"; foregroundColor = "#78CC33"; match = "#[0-9A-Fa-f]{6}"; },
             );
         },
@@ -29,7 +29,7 @@
             end = "\"";
             swallow = "\\\\.";
             patterns = (
-                {   name = "strings.regexp.tm-language-def"; foregroundColor = "#ff0000"; match = "(\\\\\\\\[tvnrfaewWdDsSuUlL]([*+?])?(?)?|\\^|\\$|\\||\\.([*+?])?(?)?)|\\\\\\\\[Az<>bB]|\\\\\\\\)"; },
+                {   name = "strings.regexp.tm-language-def"; foregroundColor = "#ff0000"; match = "(\\\\\\\\[tvnrfaewWdDsSuUlL]([*+?])?\\??|\\^|\\$|\\||\\.([*+?])?\\??)|\\\\\\\\[Az<>bB])"; },
                 {   name = "constants.colors.tm-language-def"; foregroundColor = "#78CC33"; match = "#[0-9A-Fa-f]{6}"; },
             );
         },
