Some seem to have a need for this ;)
git-svn-id: http://svn.textmate.org/trunk/LanguageDefinition.tmbundle@133 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Templates/LanguageDefinition/info.plist
+++ b/Templates/LanguageDefinition/info.plist
@@ -1,5 +1,14 @@
-{
-    name = "Language Definition (TextMate)";
-    extension = "plist";
-    command = 'cp Template.plist "$TM_NEW_FILE"';
-}
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>command</key>
+	<string>cp Template.plist "$TM_NEW_FILE"</string>
+	<key>extension</key>
+	<string>plist</string>
+	<key>name</key>
+	<string>Language Definition (TextMate)</string>
+	<key>uuid</key>
+	<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
+</dict>
+</plist>
