Name of string element is now plural (strings.double-quoted)
git-svn-id: http://svn.textmate.org/trunk/LanguageDefinition.tmbundle@242 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Templates/LanguageDefinition/Template.plist
+++ b/Templates/LanguageDefinition/Template.plist
@@ -28,7 +28,7 @@
             fontStyle = (bold, italic);
             match = "\\<(list|of|keywords)\\>"; 
         },
-        {   name = "string.double-quoted.languageName";
+        {   name = "strings.double-quoted.languageName";
             foregroundColor = "#78CC33";
             begin = '"';
             end = '"';
