• Only creates file if it doesn't already exist. • Provides the instantiated template with an UUID.
git-svn-id: http://svn.textmate.org/trunk/LanguageDefinition.tmbundle@295 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Templates/LanguageDefinition/Template.plist
+++ b/Templates/LanguageDefinition/Template.plist
@@ -1,6 +1,9 @@
 {
     /* The name as it will appear in the Syntax Highlight List */
     name = ""; 
+
+    /* so that we can always recognize this syntax */
+    uuid = "__UUID_PLACEHOLDER__";
     
     /* Which filetypes this highlighting should be applied to automatically */
     fileTypes = (); 
