• Minor changes (font style wasn't an array)
git-svn-id: http://svn.textmate.org/trunk/LanguageDefinition.tmbundle@330 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Templates/LanguageDefinition/Template.plist
+++ b/Templates/LanguageDefinition/Template.plist
@@ -2,7 +2,7 @@
     /* The name as it will appear in the Syntax Highlight List */
     name = ""; 
 
-    /* so that we can always recognize this syntax */
+    /* So that we can always recognize this syntax */
     uuid = "__UUID_PLACEHOLDER__";
     
     /* Which filetypes this highlighting should be applied to automatically */
@@ -38,7 +38,7 @@
             swallow = "\\\\.";
             /* Patterns with begin and end can contain other patterns (nested as far as you want) */
             patterns = (
-                {   name = "Nested Pattern"; fontStyle = underline;
+                {   name = "Nested Pattern"; fontStyle = ( underline );
                     match = "[0-9]";
                 }
             )
