--- a/info.plist
+++ b/info.plist
@@ -4,6 +4,12 @@
 <dict>
 	<key>name</key>
 	<string>Language Definition</string>
+	<key>ordering</key>
+	<array>
+		<string>012EEE69-8E4B-11D9-9E67-000D93589AF6</string>
+		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
+		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
+	</array>
 	<key>uuid</key>
 	<string>5A9D4FC6-6CBE-11D9-A21B-000D93589AF6</string>
 </dict>
