• always did cut'n'paste for the capture-naming, so now there's a snippet (limited to scope: “source.plist.language-definition”). • changed scope of the other snippets to “source.plist.language-definition” as well (well, for “uuid” it's only “source.plist”).
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@661 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/scopeName (sc).plist
+++ b/Snippets/scopeName (sc).plist
@@ -7,7 +7,7 @@
 	<key>name</key>
 	<string>scopeName (sc)</string>
 	<key>scope</key>
-	<string>source.plist</string>
+	<string>source.plist.language-definition</string>
 	<key>tabTrigger</key>
 	<string>sn</string>
 	<key>uuid</key>
