--- a/Snippets/captures (captures).plist
+++ b/Snippets/captures (captures).plist
@@ -3,14 +3,16 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>uuid = "`uuidgen`";</string>
+	<string>captures = {
+	1 = { name = "${1:name-of-capture}"; };$0
+};</string>
 	<key>name</key>
-	<string>uuid</string>
+	<string>captures (captures)</string>
 	<key>scope</key>
-	<string>source.plist</string>
+	<string>source.plist.language-definition</string>
 	<key>tabTrigger</key>
-	<string>uuid</string>
+	<string>captures</string>
 	<key>uuid</key>
-	<string>012EEE69-8E4B-11D9-9E67-000D93589AF6</string>
+	<string>B28EA1EE-B356-11D9-A115-000D93589AF6</string>
 </dict>
 </plist>
