• Added scope to all this stuff. • Changed name of several snippets, including the trigger in parenthesis, and generally using a name matching the construct it inserts with “..” for the placeholders • Made minor changes in actual snippets, like:   · always use tabs (TM will convert to spaces when inserting, if user prefers)   · end some of the snippets with ${0:# code...} to indicate there's a last placeholder
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@681 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -5,17 +5,13 @@
     fileTypes = (plist); 
     foldingStartMarker = "(/\\*|\\{|\\()"; 
     foldingStopMarker = "(\\*/|\\}|\\))"; 
-    highlightPairs = ( ("(", ")"), ("[", "]"), ("{", "}") ); 
-    smartTypingPairs = ( ("(", ")"), ("[", "]"), ("{", "}"), ("\"", "\""), ("'", "'") );
-    increaseIndentPattern = "(\\{|\\()\\s*$"; 
-
 
     patterns = (
         {   name = "keyword.tm-language-def";
-            match = "\\<(name|fileTypes|foldingStartMarker|foldingStopMarker|increaseIndentPattern|smartTypingPairs|highlightPairs|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|firstLineMatch)\\>"; 
+            match = "\\<(name|fileTypes|foldingStartMarker|foldingStopMarker|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|firstLineMatch)\\>"; 
         },
         {   name = "invalid.deprecated.tm-language-def";
-            match = "\\<(foregroundColor|backgroundColor|foregroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode)\\>";
+            match = "\\<(foregroundColor|backgroundColor|foregroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\\>";
         },
         {   name = "comment.block.tm-language-def"; begin = "/\\*"; end = "\\*/"; },
         {   name = "comment.line.tm-language-def"; match = "//.*$"; },  
