--- a/info.plist
+++ b/info.plist
@@ -7,6 +7,8 @@
 	<key>ordering</key>
 	<array>
 		<string>012EEE69-8E4B-11D9-9E67-000D93589AF6</string>
+		<string>867E9276-B230-11D9-AD23-000D93589AF6</string>
+		<string>B28EA1EE-B356-11D9-A115-000D93589AF6</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
 		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
 	</array>
