• Added proper regex for integers. • Added rule for dictionary keys (under keyword). • Made language-def include source.plist, but markup any unrecognized key as invalid.unknown-keyword.tm-language-def. • Removed styles.
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@777 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -13,8 +13,9 @@
         {   name = "invalid.deprecated.tm-language-def";
             match = "\\<(foregroundColor|backgroundColor|foregroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\\>";
         },
-        {   name = "comment.block.tm-language-def"; begin = "/\\*"; end = "\\*/"; },
-        {   name = "comment.line.tm-language-def"; match = "//.*$"; },  
+        {   name = "invalid.illegal.unknown-keyword.tm-language-def"; 
+            match = "[-a-zA-Z_.]+(?=\\s*=)";
+        },
         {   name = "string.single-quoted.tm-language-def";
             begin = "'(?=.*\')";
             end = "'";
@@ -24,7 +25,6 @@
                 {   name = "string.regexp.tm-language-def"; match = "(\\\\\\\\[tvnrfaewWdDsSuUlL]([*+?])?\\??|\\^|\\$|\\||\\.([*+?])?\\??)|\\\\\\\\[Az<>bB])"; },
             );
         },
-
         {   name = "string.double-quoted.tm-language-def";
             begin = "\"(?=.*\")";
             end = "\"";
@@ -34,5 +34,6 @@
                 {   name = "invalid.deprecated.constants.colors.tm-language-def"; match = "#[0-9A-Fa-f]{6}"; },
             );
         },
+        {   include = "source.plist"; }
     ); 
 }
