--- a/info.plist
+++ b/info.plist
@@ -6,6 +6,9 @@
 	<string>Language Definition</string>
 	<key>ordering</key>
 	<array>
+		<string>E5142394-B07A-11D9-8EC4-000D93589AF6</string>
+		<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
+		<string>970BA294-B667-11D9-8D53-00039369B986</string>
 		<string>012EEE69-8E4B-11D9-9E67-000D93589AF6</string>
 		<string>867E9276-B230-11D9-AD23-000D93589AF6</string>
 		<string>B28EA1EE-B356-11D9-A115-000D93589AF6</string>
