--- a/Snippets/scopeName (sc).plist
+++ b/Snippets/scopeName (sc).plist
@@ -5,11 +5,11 @@
 	<key>content</key>
 	<string>scopeName = "source.$0`tr &lt;&lt;&lt;${TM_FILENAME%.plist} '[A-Z]' '[a-z]'`";</string>
 	<key>name</key>
-	<string>scopeName (sc)</string>
+	<string>scopeName (scopeName)</string>
 	<key>scope</key>
 	<string>source.plist.language-definition</string>
 	<key>tabTrigger</key>
-	<string>sn</string>
+	<string>scopeName</string>
 	<key>uuid</key>
 	<string>867E9276-B230-11D9-AD23-000D93589AF6</string>
 </dict>
