--- a/Templates/LanguageDefinition/info.plist
+++ b/Templates/LanguageDefinition/info.plist
@@ -3,7 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>command</key>
-	<string>[ -f "$TM_NEW_FILE" ] || perl -pe &lt;Template.plist &gt;"$TM_NEW_FILE" 's/__UUID_PLACEHOLDER__/`uuidgen|tr -d "\n"`/e'</string>
+	<string>if [[ ! -f "$TM_NEW_FILE" ]]; then
+   sed -e "/\${TM_LANGUAGE}/s//`tr &lt;&lt;&lt;${TM_NEW_FILE_BASENAME} '[A-Z]' '[a-z]'`/" \
+       -e "/\${TM_BASENAME}/s//${TM_NEW_FILE_BASENAME}/" \
+       -e "/\${TM_USERNAME}/s//`niutil -readprop / /users/\$USER realname`/" \
+       -e "/\${TM_UUID}/s//`uuidgen|tr -d '\n'`/" \
+       Template.plist &gt;"$TM_NEW_FILE"
+fi</string>
 	<key>extension</key>
 	<string>plist</string>
 	<key>name</key>
