Minor change in template.
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@849 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Templates/LanguageDefinition/Template.plist
+++ b/Templates/LanguageDefinition/Template.plist
@@ -1,4 +1,4 @@
-// syntax for ${TM_LANGUAGE} by ${TM_USERNAME}
+// language definition for ${TM_BASENAME} by ${TM_USERNAME}
 {
     /* The name as it will appear in the Syntax Highlight List */
     name = "${TM_BASENAME}"; 
