Changed all uses of \< and \> to \b. Beta 9 uses oniguruma as regular expression library and doesn't have the former. Other than that, and lack of conditions (?(n)<true>:<false>) (and different syntax for (?R)) then there shouldn't be any compatibility problems. On the positive side, oniguruma has recursive sub-groups, look-behind, is faster, and gives proper error codes for bad regular expressions!
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@916 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -7,7 +7,7 @@
     foldingStopMarker = "(\\*/|\\}|\\))"; 
     patterns = (
         {   name = "declaration.rule.tm-language-def";
-            match = "\\<(name)\\s*=\\s*((\"|')?(.*?)\\3)\\s*;";
+            match = "\\b(name)\\s*=\\s*((\"|')?(.*?)\\3)\\s*;";
             captures = {
                 1 = { name = "keyword.tm-language-def"; };
                 2 = { name = "string.tm-language-def"; };
@@ -15,10 +15,10 @@
             };
         },
         {   name = "keyword.tm-language-def";
-            match = "\\<(fileTypes|keyEquivalent|foldingStartMarker|foldingStopMarker|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|beginCaptures|endCaptures|firstLineMatch)\\>"; 
+            match = "\\b(fileTypes|keyEquivalent|foldingStartMarker|foldingStopMarker|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|beginCaptures|endCaptures|firstLineMatch)\\b"; 
         },
         {   name = "invalid.deprecated.tm-language-def";
-            match = "\\<(foregroundColor|backgroundColor|foregroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\\>";
+            match = "\\b(foregroundColor|backgroundColor|foregroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\\b";
         },
         {   name = "invalid.illegal.unknown-keyword.tm-language-def"; 
             match = "[-a-zA-Z_.]+(?=\\s*=)";
