Updated to use \b and added a keyEquivalent key.
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@917 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Templates/LanguageDefinition/Template.plist
+++ b/Templates/LanguageDefinition/Template.plist
@@ -2,6 +2,7 @@
 {
     /* The name as it will appear in the Syntax Highlight List */
     name = "${TM_BASENAME}"; 
+    keyEquivalent = "~^${TM_KEY}";
 
     /* Scope name used sometimes for styling or limiting the activation
        of snippets, commands, and macros to files using this syntax
@@ -23,7 +24,7 @@
     /* This is where the actual highlighting is defined. */
     patterns = (
         {   name = "keyword.control.${TM_LANGUAGE}";
-            match = "\\<(list|of|keywords)\\>"; 
+            match = "\\b(list|of|keywords)\\b"; 
         },
         {   name = "string.double-quoted.${TM_LANGUAGE}";
             begin = '"'; end = '"'; swallow = "\\\\.";
