--- a/Commands/Show Keyboard Shortcuts.plist
+++ b/Commands/Show Keyboard Shortcuts.plist
@@ -6,6 +6,8 @@
 	<string>nop</string>
 	<key>command</key>
 	<string>"${TM_RUBY:=ruby}" -- "${TM_BUNDLE_PATH}/Tools/list_shortcuts.rb"</string>
+	<key>dontFollowNewOutput</key>
+	<true />
 	<key>input</key>
 	<string>none</string>
 	<key>keyEquivalent</key>
