- Updated the Python theme as per Allan's suggestions - Removed the shellVariables thing from the LanguageDefinition (although I think it wasn't so misplaced there) - Added an invalid background color again, this is pretty bad, but I needed to have something there quickly and you don't want to see that anyway. - Changed the trailing-whitespace match to be completely transparent, you can change it back if you want to.
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1129 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -15,7 +15,7 @@
             };
         },
         {   name = "keyword.tm-language-def";
-            match = "\\b(fileTypes|keyEquivalent|foldingStartMarker|foldingStopMarker|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|beginCaptures|endCaptures|firstLineMatch|shellVariables)\\b"; 
+            match = "\\b(fileTypes|keyEquivalent|foldingStartMarker|foldingStopMarker|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|beginCaptures|endCaptures|firstLineMatch)\\b"; 
         },
         {   name = "invalid.deprecated.tm-language-def";
             match = "\\b(foregroundColor|backgroundColor|foregroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\\b";
