- Restart TextMate now waits for 2 seconds for TM to close, if it hasn't closed by then, it just gives up and goes away. This is because the original version from allan stayed around indefinitely and if you cancelled the quit (by cancelling the save of a file), it would hog up lots of CPU cycles.
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1130 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Restart TextMate.plist
+++ b/Commands/Restart TextMate.plist
@@ -13,11 +13,17 @@ app_path=$( ps axw -o pid,command | \
 
 osascript -e 'tell app "TextMate" to quit'
 
-while [[ -n $(ps -xc|grep 'TextMate$') ]]; do
-    sleep .1;
+for (( i = 0; i &lt; 20; i++ )); do
+    if [[ ! -n $(ps -xc|grep 'TextMate$') ]]; then
+        break;
+    else
+        sleep .1;
+    fi
 done
 
-open "$app_path"
+if [[ ! -n $(ps -xc|grep 'TextMate$') ]]; then
+    open "$app_path"
+fi
 } &amp;&gt;/dev/null &amp;</string>
 	<key>input</key>
 	<string>none</string>
