--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -9,33 +9,29 @@
         {   name = "declaration.rule.tm-language-def";
             match = "\\b(name)\\s*=\\s*((\"|')?(.*?)\\3)\\s*;";
             captures = {
-                1 = { name = "keyword.tm-language-def"; };
-                2 = { name = "string.tm-language-def"; };
+                1 = { name = "support.constant.name.tm-language-def"; };
+                2 = { name = "string.quoted.tm-language-def"; };
                 4 = { name = "entity.name.function.tm-language-def"; };
             };
         },
-        {   name = "keyword.tm-language-def";
+        {   name = "support.constant.tm-language-def";
             match = "\\b(fileTypes|keyEquivalent|foldingStartMarker|foldingStopMarker|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|beginCaptures|endCaptures|firstLineMatch)\\b"; 
         },
-        {   name = "invalid.deprecated.tm-language-def";
+        {   name = "invalid.deprecated.constant.tm-language-def";
             match = "\\b(foregroundColor|backgroundColor|foregroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\\b";
         },
         {   name = "invalid.illegal.unknown-keyword.tm-language-def"; 
             match = "[-a-zA-Z_.]+(?=\\s*=)";
         },
-        {   name = "string.single-quoted.tm-language-def";
-            begin = "'(?=.*\')";
-            end = "'";
-            swallow = "\\\\.";
+        {   name = "string.quoted.single.tm-language-def";
+            begin = "'(?=.*\')"; end = "'"; swallow = "\\\\.";
             patterns = (
-                {   name = "invalid.deprecated.constants.colors.tm-language-def"; match = "#[0-9A-Fa-f]{6}"; },
+                {   name = "invalid.deprecated.constant.color.tm-language-def"; match = "#[0-9A-Fa-f]{6}"; },
                 {   name = "string.regexp.tm-language-def"; match = "(\\\\\\\\[tvnrfaewWdDsSuUlL]([*+?])?\\??|\\^|\\$|\\||\\.([*+?])?\\??|\\\\\\\\[Az<>bB])"; },
             );
         },
-        {   name = "string.double-quoted.tm-language-def";
-            begin = "\"(?=.*\")";
-            end = "\"";
-            swallow = "\\\\.";
+        {   name = "string.quoted.double.tm-language-def";
+            begin = "\"(?=.*\")"; end = "\""; swallow = "\\\\.";
             patterns = (
                 {   name = "string.regexp.tm-language-def"; match = "(\\\\\\\\[tvnrfaewWdDsSuUlL]([*+?])?\\??|\\^|\\$|\\||\\.([*+?])?\\??|\\\\\\\\[Az<>bB])"; },
                 {   name = "invalid.deprecated.constants.colors.tm-language-def"; match = "#[0-9A-Fa-f]{6}"; },
